更新 Survey 语义Token

--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -906,6 +906,63 @@ These findings suggest that the effect of BPE is negatively correlated with the 
 
 </td></tr></table>
 
+### Variable Frame Rate Tokens and Unit Discover
+
+Information in speech is not uniformly distributed along the time axis~\cite{dieleman2021variable}.
+In segments such as silence or long vowels, information density is low, whereas in segments with explosive consonants, speech events occur much more frequently.
+This inherent non-uniformity suggests that it might be more natural to allocate more tokenized bits to regions with dense information and higher variance, and fewer bits to regions with less uncertainty.
+This kind of discrete speech tokens is referred to as \textit{variable frame rate (VFR) tokens} in this review.
+Note that while multi-resolution and variable-bitrate tokens have been introduced previously, the concept of VFR is still distinct.
+In multi-resolution tokens~\cite{Siuzdak_SNAC_Multi-Scale_Neural_2024,guo2024speaking}, each quantizer operates at a fixed frame rate.
+In variable-bitrate tokens~\cite{chae2024variable}, the frame rate remains fixed, while the variability lies in the  number of quantizers per frame.
+Instead, VFR tokens should directly allocate different granularities on the temporal axis.
+
+VFR tokens are closely related to acoustic unit discovery.
+As speech lacks a natural boundary of phonetic units~\cite{mohamed2022self}, there are much research efforts to find and locate the underlying acoustic units behind speech utterances in an unsupervised manner~\cite{eloff19_interspeech,dunbar20_interspeech,niekerk20b_interspeech,nguyen2020zero}.
+This is particularly of interest for low-resource languages.
+The discovered units can guide the boundary segmentation of VFR tokens.
+To this end, VFR tokens are interesting not only because they might reduce the necessary bitrate, but also because they can introduce a strong inductive bias that linguistic knowledge is encoded~\cite{dieleman2021variable}.
+
+A recent direction of VFR tokens is to discover acoustic units from an SSL model.
+Note that deduplicated tokens and acoustic BPE themselves can be regarded as VFR tokens.
+Sylber~\cite{cho2024sylber} and SyllableLM~\cite{baade2024syllablelm} take similar approaches that first locate acoustic boundaries from existing HuBERT models, and then train another HuBERT student with segment-level pooled targets between boundaries.
+The final HuBERT embeddings undergo the same segment-level pooling and kmeans clustering procedure to produce tokens at a very low frame rate ($\approx5$Hz) that align well with syllables.
+
+Boundary prediction can be involved to achieve frame rate variability in the training process, where a specific model predicts frame-level boundaries and is trained together with other network modules.
+The training techniques of such models include reinforcement learning~\cite{cuervo2022variable}, soft pooling~\cite{hwang2024removing}, and slowness constraint~\cite{dieleman2021variable}.
+However, these approaches are rarely adopted in the context of discrete speech tokens today, and there have barely been a VFR acoustic token till now.
+
+</td><td>
+
+</td></tr></table>
+
+### Speech Token Vocoders
+
+<table><tr><td width="50%">
+
+Acoustic tokens are designed naturally with a decoder that outputs waveforms or spectrograms given tokens, but semantic tokens are not.
+A necessary component for building a discrete token-based speech generation system with semantic tokens is the speech resynthesis model, or speech token vocoders.
+Unlike traditional spectrogram-based vocoders~\cite{kong2020hifigan}, these vocoders receive discrete speech tokens as an input and reconstruct speech signals.
+Polyak et al.~\cite{polyak21} first explores speech resynthesis from discrete speech units by a HifiGAN~\cite{kong2020hifigan} augmented with discretized pitch units and speaker embedding inputs.
+
+The vec2wav vocoder in VQTTS~\cite{VQTTS} improves this vocoder by a Conformer~\cite{conformer} frontend module before HifiGAN generator.
+Later, CTX-vec2wav~\cite{du2024unicats} proposes a position-agnostic cross-attention mechanism that effectively integrates timbre information from surrounding acoustic contexts without the need for pretrained speaker embeddings.
+This makes it more timbre-controllable and suitable for zero-shot TTS and VC~\cite{li2024sef}.
+Upon it, vec2wav 2.0~\cite{guo2024vec2wav} further advances the timbre controllability by SSL timbre features and adaptive activations, demonstrating a strong VC performance.
+
+It is also feasible to apply diffusion or flow matching algorithms in token vocoders~\cite{tortoise,seedtts,du2024cosyvoice}.
+There, the discrete tokens are treated as a condition for diffusion or flow matching to generate mel-spectrograms, and further converted to waveform by a pretrained mel vocoder.
+Compared to training a token-to-wav vocoder in an end-to-end fashion, training a token-to-mel model is more convenient and does not need adversarial training.
+To better control timbre, a mask strategy is introduced into the training process where the model only computes loss on the un-masked part of spectrograms~\cite{du2024cosyvoice}.
+During inference, spectrogram from speaker prompt conditions the generative process, which can be regarded as a form of ``in-context learning''.
+
+However, this requires tokens to be extracted from reference prompts before synthesis.
+Also, inference efficiency may be compromised for better generation quality with multiple inference steps, and this method is only validated on massive amount of data currently.
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
 <table><tr><td width="50%">
