调整后 Survey 格式

--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -65,7 +65,8 @@ Therefore, a necessary step before applying speech data to LLM is the \textbf{to
 </td></tr>
 <tr><td>
 
-*To convert long speech waveforms into short discrete tokens for downstream tasks. These tokens should be compatible with the underlying textual representations, especially for language modeling approaches targeted at speech.*
+*To convert long speech waveforms into short discrete tokens for downstream tasks.
+These tokens should be compatible with the underlying textual representations, especially for language modeling approaches targeted at speech.*
 
 
 </td><td>
@@ -73,8 +74,10 @@ Therefore, a necessary step before applying speech data to LLM is the \textbf{to
 </td></tr>
 <tr><td>
 
-As a result, significant efforts have been directed towards developing efficient and powerful speech tokenization methods. Generally, these methods are based on two distinct principles, giving rise to two types of speech tokens: acoustic tokens and semantic tokens.
-Acoustic tokens are derived from neural codecs designed to encode speech at a low bitrate while preserving as much information as possible. In contrast, semantic tokens originate from speech self-supervised learning (SSL)[^mohamed2022self], which aims to learn a more phonetic or semantic representation space, making it easier for speech recognition.
+As a result, significant efforts have been directed towards developing efficient and powerful speech tokenization methods.
+Generally, these methods are based on two distinct principles, giving rise to two types of speech tokens: acoustic tokens and semantic tokens.
+Acoustic tokens are derived from neural codecs designed to encode speech at a low bitrate while preserving as much information as possible.
+In contrast, semantic tokens originate from speech self-supervised learning (SSL)[^mohamed2022self], which aims to learn a more phonetic or semantic representation space, making it easier for speech recognition.
 These two nearly independent lines of research magically intersect in the context of language modeling for speech.
 Now, there are also efforts that try to design a speech tokenizer that accomplishes the two objectives simultaneously[^zhang2024speechtokenizer], [^kyutai2024moshi].
 
@@ -130,7 +133,8 @@ We will characterize the two types of tokens both by conceptual descriptions and
 Discrete speech tokens are obtained through the quantization of continuous representations, which is usually achieved by offline clustering or online vector quantization algorithms.
 This section provides a concise overview of the existing quantization methods commonly used in discrete speech tokens.
 
-Denote $\bm x\in \mathbb R^d$ as a vector in the $d$-dimensional continuous space. A quantization process $q$ transforms $\bm x$ into a discrete \textit{token} in a finite set, i.e. $q(\bm x): \mathbb R^d\to\{1,2,...,V\}$ where $V$ is the \textit{vocabulary size}.
+Denote $\bm x\in \mathbb R^d$ as a vector in the $d$-dimensional continuous space.
+A quantization process $q$ transforms $\bm x$ into a discrete \textit{token} in a finite set, i.e., $q(\bm x): \mathbb R^d\to\{1,2,...,V\}$ where $V$ is the \textit{vocabulary size}.
 The output tokens are sometimes referred to as \textit{indexes} in the finite $V$-cardinal set.
 The function $q$ is usually associated with a \textit{codebook} $\mathcal C=\{\bm c_1,\bm c_2,...,\bm c_V\}$ where every \textit{code-vector} $\bm c_i\in\mathbb R^d$ corresponds to the $i$-th token.
 The code-vectors are representations of tokens in the original $d$-dimensional space.
@@ -147,7 +151,7 @@ Similarly, $\lfloor z\rfloor$ denotes the floor of $z$, i.e., the largest intege
 
 Clustering is a simple approach for quantization.
 Given a dataset $X=\{\bm x_1,\bm x_2,...\bm x_N\}$, a clustering algorithm aims to assign each sample $\bm x_i$ to a group such that some cost is minimized.
-The most frequently used clustering method for discrete speech tokens is k-means clustering[^IKOTUN2023178], e.g. in GSLM[^lakhotia2021generative].
+The most frequently used clustering method for discrete speech tokens is k-means clustering[^IKOTUN2023178], e.g., in GSLM[^lakhotia2021generative].
 K-means is a clustering algorithm based on Euclidean distances.
 Its training process iteratively assigns each data sample to the nearest centroid, and moves cluster centroids till convergence, with a pre-defined number of clusters.
 After training, the centroids form the codebook, and new data can be quantized to the index of the nearest centroid in this Voronoi partition.
@@ -177,14 +181,14 @@ There are multiple VQ methods:
 
 #### K-Means VQ
 
-Like k-means clustering, k-means VQ method finds the code-vector closest to the input, i.e.
+Like k-means clustering, k-means VQ method finds the code-vector closest to the input, i.e.,
 
 $$
     q(\bm x)=\underset{i\in \{1,2,...,V\}}{\arg\min} \|\bm x-\bm c_i\|^2.
 $$
 
 Then, code-vector $\bm c_k\triangleq\bm c_{q(\mathbf x)}$ is fed to subsequent networks.
-As the $\min$ operation is not differentiable, straight-through estimators (STEs)[^bengio2013estimating] are usually applied to graft gradients, i.e. $\operatorname{STE}(\bm c_k,\bm x)=\bm x+\operatorname{sg}(\bm c_k-\bm x)$ where $\operatorname{sg(\cdot)}$ stops tracking gradients.
+As the $\min$ operation is not differentiable, straight-through estimators (STEs)[^bengio2013estimating] are usually applied to graft gradients, i.e., $\operatorname{STE}(\bm c_k,\bm x)=\bm x+\operatorname{sg}(\bm c_k-\bm x)$ where $\operatorname{sg(\cdot)}$ stops tracking gradients.
 In this way, the input value to subsequent networks is still $\bm c_k$, but gradients are grafted to $\bm x$ in back propagation.
 
 Auxiliary loss functions are often used together with k-means VQ[^VQVAE]: commitment loss $\mathcal L_{\text{cmt}}=\|\operatorname{sg}(\bm c_k)-\bm x\|^2$ and codebook loss $\mathcal L_{\text{code}}=\|\operatorname{sg}(\bm x)-\bm c_k\|^2$.
@@ -206,7 +210,7 @@ Other solutions include additional auxiliary constraints such as entropy penalty
 Instead of quantizing by Euclidean distance, another choice is by probability.
 Gumbel VQ[^jang2017categorical] uses Gumbel-Softmax as a proxy distribution for traditional Softmax to allow differentiable sampling.
 Given input $\bm x$ and a codebook of size $V$, a transform $h(\cdot)$ is applied on $\bm x$ into $V$ logits: $\bm l=h(\bm x)\in \mathbb R^V$.
-In inference, quantization is performed by choosing the index with the largest logit, i.e. $q(\bm x)=\arg\max_i \left\{\bm l^{(i)}\right\}$.
+In inference, quantization is performed by choosing the index with the largest logit, i.e., $q(\bm x)=\arg\max_i \left\{\bm l^{(i)}\right\}$.
 In training, samples are drawn from the categorical distribution implied by $\bm l$ for the subsequent neural networks.
 To achieve efficient sampling and let gradients pass through, Gumbel trick is used:
 
@@ -244,7 +248,8 @@ $$
     q\left(\bm x^{(i)}\right)=\operatorname{round}\left(\lfloor L/2\rfloor\tanh\left(\bm x^{(i)}\right)\right).
 $$
 
-The quantized values are thus integers ranging from $-\lfloor L/2 \rfloor$ to $\lfloor L/2 \rfloor$\footnote{Following [^mentzer2024finite], this is the symmetric case for $L$ being odd. When $L$ is even, there is an offset before rounding to obtain asymmetric quantized values.}.
+The quantized values are thus integers ranging from $-\lfloor L/2 \rfloor$ to $\lfloor L/2 \rfloor$\footnote{Following [^mentzer2024finite], this is the symmetric case for $L$ being odd.
+When $L$ is even, there is an offset before rounding to obtain asymmetric quantized values.}.
 For a $d$-dimensional vector $\bm x$, there are $L^d$ possible quantization outcomes.
 Hence, FSQ usually requires a much smaller hidden dimension than VQ.
 STE is applied to pass gradients.
@@ -261,8 +266,13 @@ FSQ is reported to have  better codebook usage\footnote{Although there is no lon
 In many cases, a single VQ module suffers from a highly-limited representation space, thus results in poor performance compared to continuous counterparts.
 There are some widely-used VQ tricks that introduce multiple quantizers to refine the quantized space, as shown in Figure.03:
 
-- **Grouped VQ (GVQ)**, also known as **product quantization**[^product_quantization]. It groups the input vector $\bm x$ by dimensions and apply VQ on different parts of $\bm x$ independently. They can have different or shared codebooks. The VQ outputs are then concatenated along dimensions to match that of $\bm x$. For instance, GVQ is used in neural word embeddings[^9164982] and speech self-supervised learning models[^vq-wav2vec], [^baevski2020wav2vec] to achieve efficient quantization.
-- **Residual VQ (RVQ)**, also known as **multi-stage quantization**[^multiple-stage-vector-quantization]. It adopts a serial approach that iteratively quantizes the residual of the last quantizer.
+- **Grouped VQ (GVQ)**, also known as **product quantization**[^product_quantization].
+It groups the input vector $\bm x$ by dimensions and apply VQ on different parts of $\bm x$ independently.
+They can have different or shared codebooks.
+The VQ outputs are then concatenated along dimensions to match that of $\bm x$.
+For instance, GVQ is used in neural word embeddings[^9164982] and speech self-supervised learning models[^vq-wav2vec], [^baevski2020wav2vec] to achieve efficient quantization.
+- **Residual VQ (RVQ)**, also known as **multi-stage quantization**[^multiple-stage-vector-quantization].
+It adopts a serial approach that iteratively quantizes the residual of the last quantizer.
 Similar to GVQ, RVQ also has multiple quantizers.
 For the $i$-th quantizer $q_i$ with input $\bm x_i$ and output code-vector $\bm c_{k}$, the residual is defined as $\bm x_{i+1}=\bm x_i-\bm c_{k}$.
 The outputs from all $q_i$ are finally summed as the quantized result of $\bm x$.
@@ -318,7 +328,8 @@ There are two major paradigms for designing the encoder, decoder, and quantizers
 #### VQ-GAN
 
 VQ-GAN[^esser2021taming] is a very commonly adopted framework of acoustic tokens that trains a VQ-VAE with GAN objectives.
-Besides the original reconstruction and VQ objectives in a VQ-VAE, VQ-GAN uses discriminators $d_\xi(\bm x, \hat{\bm x})$ to distinguish real and reconstructed data that adversarially train the generator network composed of $f_\theta,q_\phi$, and $g_\psi$. In acoustic tokens, there are usually multiple discriminators, e.g. multi-resolution and multi-scale STFT discriminators from the neural vocoder researches[^kumar2019melgan], [^jang21_interspeech].
+Besides the original reconstruction and VQ objectives in a VQ-VAE, VQ-GAN uses discriminators $d_\xi(\bm x, \hat{\bm x})$ to distinguish real and reconstructed data that adversarially train the generator network composed of $f_\theta,q_\phi$, and $g_\psi$.
+In acoustic tokens, there are usually multiple discriminators, e.g., multi-resolution and multi-scale STFT discriminators from the neural vocoder researches[^kumar2019melgan], [^jang21_interspeech].
 The generator architecture of VQ-GAN-based acoustic tokens has multiple choices, with the three most representative ones visualized in Fig.\ref{fig:generator}: CNN-based, Transformer-based, and U-Net-based.
 
 The CNN-based generator is the most widely used architecture so far in acoustic tokens.
@@ -334,18 +345,18 @@ The acoustic tokens can consequently reside in variable bitrates depending on th
 The inputs and outputs of the codec model can also be frequency-domain features like magnitude and phase spectra for reducing computation burden[^du2024funcodec].
 There, the convolution kernels are typically 2D instead of 1D in the time-domain codecs.
 
-Later, Transformers[^transformer] have been adopted, e.g. in Single-Codec[^singlecodec] and Mimi[^kyutai2024moshi].
+Later, Transformers[^transformer] have been adopted, e.g., in Single-Codec[^singlecodec] and Mimi[^kyutai2024moshi].
 They can be directly applied to frequency-domain inputs and outputs.
 When operating on waveform-domain inputs or outputs, a CNN[^kyutai2024moshi] or patchifying[^wu2024ts3codectransformerbasedsimplestreaming], [^parker2024scalingtransformerslowbitratehighquality] operation is usually added before or after the Transformer blocks.
 In Mimi, a shallow Transformer layer is added after the CNN-based encoder, and vice versa in its decoder.
-Recently, some propose to use purely Transformer-based backbone and discard the CNN blocks, e.g. TS3-Codec[^wu2024ts3codectransformerbasedsimplestreaming].
+Recently, some propose to use purely Transformer-based backbone and discard the CNN blocks, e.g., TS3-Codec[^wu2024ts3codectransformerbasedsimplestreaming].
 As Transformers demonstrate superior modeling ability and scaling property, these works prove to outperform CNN-based codecs either with less computation[^wu2024ts3codectransformerbasedsimplestreaming] or larger scale[^parker2024scalingtransformerslowbitratehighquality].
 However, to ensure stream-ability, an attention mask should be employed[^kyutai2024moshi].
 The encoder and decoder can also be designed to be different.
 For example, Single-Codec[^singlecodec] uses Conformer[^conformer] encoder and CNN decoder, while LSCodec[^guo2024lscodec] uses the reverse configuration.
 
 Though RVQ or GVQ is usually applied, most acoustic tokens contain only one quantization module as a whole.
-However, there are also U-Net-based codecs where multiple quantizers are employed, e.g. CoFi-Codec[^guo2024speaking] and ESC[^gu2024esc].
+However, there are also U-Net-based codecs where multiple quantizers are employed, e.g., CoFi-Codec[^guo2024speaking] and ESC[^gu2024esc].
 Each sub-encoder or decoder in the U-Net can be a CNN or Transformer.
 This offers a more flexible control of the resolution of each VQ stream (Section \ref{sec:multi-resolution}).
 
@@ -357,7 +368,7 @@ These works are denoted as ``VQ-VAE+GAN'' in Table \ref{tab:acoustic-metadata}.
 #### Latent Diffusion
 
 Different from VQ-GAN which uses GAN to generate waveforms or frequency features, some codecs also use latent diffusion[^ho2020denoising], [^song2021scorebased], [^rombach2022high] as an alternative.
-These codecs use discretized tokens as a condition to generate some latent acoustic space, e.g. from a pretrained continuous speech autoencoder.
+These codecs use discretized tokens as a condition to generate some latent acoustic space, e.g., from a pretrained continuous speech autoencoder.
 Since diffusion models are strong generative models, acoustic tokens of this type does not need discriminators and adversarial training like VQ-GAN.
 For instance, LaDiffCodec[^yang2024generative] uses EnCodec tokens to condition the diffusion process from Gaussian noise to the latent space in a pretrained and frozen waveform autoencoder.
 This is to bridge the gap of reconstruction quality between discrete and continuous representations and improve the codec performance compared to the original acoustic tokens.
@@ -388,11 +399,11 @@ Those acoustic tokens are optimized towards better signal or perceptual quality 
 
 Based on SoundStream and EnCodec, more codecs with advanced VQ methods, network structure, or optimization strategies have been researched with depth.
 As an example, DAC[^kumar2024high] achieves remarkable reconstruction quality by adding periodic inductive bias, better discriminators, modified loss functions, and a better VQ mechanism from ViT-VQGAN[^yu2022vectorquantized] to improve codebook usage.
-Specifically, it performs L2-normed code lookup in a low-dimensional space (e.g. 8 or 32) instead of a high-dimensional space like 1024.
+Specifically, it performs L2-normed code lookup in a low-dimensional space (e.g., 8 or 32) instead of a high-dimensional space like 1024.
 Other architectural improvements include using frequency-domain inputs[^APCodec], [^ai24b_interspeech], [^singlecodec], variance-constrained residual blocks[^ahn2024hilcodec], multi-filter bank discriminator[^ahn2024hilcodec], selective down-sampling back-projection[^zheng2024supercodec], etc.
 
 Several training tricks are explored, such as not applying VQ with a certain probability and pure adversarial training proposed in Moshi[^kyutai2024moshi].
-Also, the training of neural speech codecs does not need to be end-to-end, i.e. the learning of VQ representations and signal reconstruction can be separated.
+Also, the training of neural speech codecs does not need to be end-to-end, i.e., the learning of VQ representations and signal reconstruction can be separated.
 [^audiodec], [^du2024apcodec+] adopt a two-stage training process that introduces adversarial losses and an additional vocoder after training only with metric losses, to achieve improved quality.
 Additional training criteria around the VQ module are proposed for better VQ utilization, such as delicate code-vector replacement strategy, codebook balancing loss, and similarity loss between consecutive RVQ layers proposed in ERVQ[^zheng2024ervq].
 
@@ -417,7 +428,7 @@ These single-codebook codecs with remarkably low bitrates offer great benefit to
 ##### Temporal Redundancy Reduction
 
 Instead of capturing all the information through VQ layers like the previously mentioned codecs, some researchers have attempted to reduce the redundant bitrate of time-varying VQ codes.
-One reasonable method is to encode the global information in speech, e.g. speaker timbre and channel effects, by a global encoder instead of the time-varying codes.
+One reasonable method is to encode the global information in speech, e.g., speaker timbre and channel effects, by a global encoder instead of the time-varying codes.
 
 Disen-TF-Codec[^jiang2023disentangled] is the first to explore VQ-GAN codec models with an additional global encoder that aids the codec decoder.
 In Disen-TF-Codec, the global features are designed to be sequential to adapt to speaker changes during transmission.
@@ -439,7 +450,8 @@ LMCodec[^LMCodec] employs autoregressive prediction from coarse codes (first RVQ
 ##### Multi-Resolution and Variable-Bitrate Coding
 
 Rather than relying solely on uni-resolution tokens, where all quantizers share the same temporal frequency, it is reasonable to design multi-resolution codecs, because speech contains both fast and slow information streams.
-For instance, many vowels exhibit slowly changing characteristics, while events such as explosive consonants and background noises require fine-grained modeling. Therefore, incorporating multiple temporal resolutions in codecs is likely to reduce the necessary bitrate.
+For instance, many vowels exhibit slowly changing characteristics, while events such as explosive consonants and background noises require fine-grained modeling.
+Therefore, incorporating multiple temporal resolutions in codecs is likely to reduce the necessary bitrate.
 SNAC[^Siuzdak_SNAC_Multi-Scale_Neural_2024] is a notable multi-resolution acoustic token.
 It follows the DAC[^kumar2024high] architecture, but in each RVQ layer, residuals are downsampled before codebook look-up and upsampled afterward.
 This enables SNAC to have three RVQ streams at a frame rate of 12, 23, 47Hz respectively.
@@ -480,7 +492,7 @@ A natural improvement is to incorporate speech semantic features either from spe
 Since speech SSL models aim to capture high-level phonetic or semantic information without external supervision[^mohamed2022self], integrating SSL features does not impose additional data requirements for injecting semantic information into the training process.
 Acoustic tokens with criteria beyond reconstruction are sometimes referred to as having a ``mixed objective''[^cui2024recent].
 Given that the primary purpose of these models remains acoustic reconstruction in these models, we continue to refer to them as acoustic tokens.
-The process of introducing semantic information into acoustic tokens is termed \textbf{semantic distillation}, with approaches summarized in Fig. \ref{fig:acoustic-distill}.
+The process of introducing semantic information into acoustic tokens is termed \textbf{semantic distillation}, with approaches summarized in Figure.\ref{fig:acoustic-distill}.
 
 </td><td>
 
@@ -557,7 +569,8 @@ Additionally, fixing a semantic codebook could negatively impact acoustic recons
 Another line of mixed-objective acoustic tokens is {disentanglement}.
 A prominent research direction is the disentanglement of speaker timbre information, as this is a global trait among all the speech information aspects.
 Encoding speaker information into every token timestep is redundant; thus, removing the global speaker timbre can make the information in acoustic tokens more compact and reduce the necessary bitrate.
-Speaker-decoupled speech tokens can alleviate the modeling burden for downstream tasks. For example, a TTS model using these tokens can achieve independent control over prosody and speaker identity.
+Speaker-decoupled speech tokens can alleviate the modeling burden for downstream tasks.
+For example, a TTS model using these tokens can achieve independent control over prosody and speaker identity.
 The disentanglement of speaker timbre also enables an acoustic token to perform voice conversion (VC), as timbre from the target speaker can be easily combined with the speaker-agnostic content tokens from the source speech.
 
 Note that in Section \ref{sec:acoustic}, it is mentioned that some codecs introduce a global encoder to reduce the necessary bitrate of time-variant tokens[^jiang2023disentangled], [^ticodec], [^singlecodec], [^zheng2024freecodecdisentangledneuralspeech].
@@ -574,7 +587,8 @@ In this section, we elaborate on \textbf{explicit} methods, which involve specia
 
 ##### Gradient reversal layer (GRL)
 
-The GRL technique[^drl] is commonly used for disentanglement. Suppose speaker information needs to be disentangled, and a classifier (or speaker verifier, etc.) $s_\mu(\cdot)$ receives some latent feature $\bm h$ from the acoustic token to perform speaker discriminative tasks.
+The GRL technique[^drl] is commonly used for disentanglement.
+Suppose speaker information needs to be disentangled, and a classifier (or speaker verifier, etc.) $s_\mu(\cdot)$ receives some latent feature $\bm h$ from the acoustic token to perform speaker discriminative tasks.
 GRL operates by negating the gradient sign before $s_\mu(\cdot)$, thereby forcing $\bm h$ to fool the speaker classifier while the classifier itself improves, similar to adversarial training.
 
 SSVC[^SSVC] is one of the pioneering efforts in this direction.
@@ -673,7 +687,8 @@ This is because they can be considered high-level abstractions of speech semanti
 SSL models initiate the learning process by defining a pretext task which enables the model to learn meaningful representations directly from the data itself.
 Typical speech SSL models employ CNNs and Transformer encoders to extract deep contextual embeddings.
 When it comes to semantic tokens, there are mainly two ways to extract those discrete tokens from an SSL model (see upper part of Fig.\ref{fig:semantic-types}):
-- External quantization, like clustering or training a VQ-VAE. This refers to extracting continuous embeddings from a certain layer or multiple layers in a pretrained SSL model, and performing quantization manually.
+- External quantization, like clustering or training a VQ-VAE.
+This refers to extracting continuous embeddings from a certain layer or multiple layers in a pretrained SSL model, and performing quantization manually.
 For example, a common semantic token is the HuBERT+kmeans units, where k-means clustering is performed on a HuBERT Transformer layer with a portion of training data~\cite{lakhotia2021generative,kharitonov-etal-2022-text}.
 It is also feasible to perform clustering on multiple layers~\cite{shi24h_interspeech,mousavi2024should}, or train a VQ-VAE on the SSL hidden embeddings~\cite{huang2023repcodec,wang2024maskgct}.
 - When an SSL model contains an inner quantizer that is trained together with other network modules, its outputs can also be regarded as semantic tokens.
@@ -859,7 +874,7 @@ These methods are inspired by language processing techniques and are thus more c
 Note that although these length reduction methods are universal across token types, they are less frequently applied to acoustic tokens.
 This is because acoustic tokens usually involve multiple VQ streams that complicate token-level operations.
 
-A common approach to reduce token sequence lengths is deduplication~\cite{chang23b_interspeech,chang2024exploring}, i.e. removing the repeated consecutive tokens in a sequence.
+A common approach to reduce token sequence lengths is deduplication~\cite{chang23b_interspeech,chang2024exploring}, i.e., removing the repeated consecutive tokens in a sequence.
 Since the encoded continuous features are often close in consecutive frames where the speech dynamics do not change rapidly, they are likely to be quantized to the same unit.
 Therefore, removing these redundant tokens can yield a more phonetic representation.
 When the deduplicated tokens are used for generative modeling, a unit-to-speech model (similar to TTS) should be employed to upsample the tokens and convert them back to acoustic signals~\cite{lakhotia2021generative}.
@@ -871,7 +886,12 @@ This mapping enables a lossless compression algorithm, allowing tokens to be per
 This operation can identify certain morphological patterns in token sequences, and offers a powerful way to remove redundant tokens.
 In practice, acoustic BPEs on HuBERT semantic tokens has demonstrated significant speed and performance gains in ASR~\cite{chang23b_interspeech,chang2024exploring}, spoken language modeling~\cite{shen2024acoustic,dekel24_interspeech} and TTS~\cite{li24qa_interspeech,vectokspeech}.
 
-Although deduplication is a simple and training-free method, acoustic BPE offers several unique advantages over it. First, acoustic BPE can identify redundant patterns that are not simply repetitions, whereas deduplication only removes exact duplicates. Additionally, deduplication discards the duration information of every token in the resulting sequence. This could be problematic for downstream tasks, as important rhythmic information may reside in the repetitions of tokens. In contrast, acoustic BPE preserves duration information by encoding repetitions of varying lengths into distinct new tokens. Furthermore, acoustic BPE is flexible in terms of target vocabulary size, which can be adjusted based on the desired length reduction ratio and downstream performance.
+Although deduplication is a simple and training-free method, acoustic BPE offers several unique advantages over it.
+First, acoustic BPE can identify redundant patterns that are not simply repetitions, whereas deduplication only removes exact duplicates.
+Additionally, deduplication discards the duration information of every token in the resulting sequence.
+This could be problematic for downstream tasks, as important rhythmic information may reside in the repetitions of tokens.
+In contrast, acoustic BPE preserves duration information by encoding repetitions of varying lengths into distinct new tokens.
+Furthermore, acoustic BPE is flexible in terms of target vocabulary size, which can be adjusted based on the desired length reduction ratio and downstream performance.
 
 We visualize the length reduction effect of BPE on different speech tokens in Fig.\ref{fig:bpe-effect}.
 In addition to semantic tokens from various models and different k-means clusters in HuBERT, we also experiment with acoustic tokens.
